@@ -1,6 +1,8 @@
 2013-04-24  Pedro Vicente  <pvicente@uci.edu>
 
         * trv_tbl_mrk_prc_fix() Mark fixed/processed flag in table 
+        
+        * ncecat test #6,7,8 Concatenate variables/groups: 1D,2D variables 
 
 2013-04-23  Pedro Vicente  <pvicente@uci.edu>
 
